# TruthCast

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: routes_chat.py  routes_detect.py  routes_export.py  routes_history.py  routes_monitor.py  routes_multimodal.py  routes_pipeline_state.py  routes_simulate.py  routes_simulation.py
app/cli/: __init__.py  (+4 more)
config/: monitor_platforms.yaml
scripts/: sse_e2e_acceptance.py
tests/: test_chat_endpoints.py  test_claim_extraction.py  test_cli_chat_renderer.py  test_cli_http_client.py  test_cli_local_agent.py  test_cli_routing.py  test_cli_safe_output.py  test_cli_sse_parsing.py  test_detect_smoke.py  test_detect_url_pipeline.py  test_evidence_alignment.py  test_evidence_retrieval.py  test_evidence_summarization.py  test_guardrails.py  test_history_endpoints.py  test_intent_classifier.py  test_monitor_alert_engine.py  test_monitor_endpoints.py  test_monitor_hot_items_service.py  test_monitor_notifier.py  test_monitor_pipeline_runner.py  test_monitor_platform_config.py  test_monitor_scheduler.py  test_monitor_subscription_service.py  test_multimodal_endpoints.py  test_multimodal_history.py  test_multimodal_ocr.py  test_news_crawler.py  test_opinion_simulation.py  test_orchestrator_smoke.py  test_pipeline_endpoints_smoke.py  test_pipeline_evidence_fusion.py  test_pipeline_state_endpoints.py  test_report_generation.py  test_risk_snapshot.py  test_url_detect.py  test_url_extract_llm_config.py  test_url_extraction_config.py  test_url_extraction_extractors.py  test_url_extraction_llm_postprocess.py  (+6 more)
web/: Dockerfile  package-lock.json  package.json
(+161 files in other folders)
