[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "truthcast"
version = "0.1.0"
description = "Fake news detection + opinion simulation MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "PyYAML>=6.0.2",
  "beautifulsoup4>=4.12.0",
  "ddgs>=9.13.0",
  "htmldate>=1.9.0",
  "python-multipart>=0.0.9",
  "json-repair",
  "playwright>=1.52.0",
  "readability-lxml>=0.8.1",
  "trafilatura>=1.12.0",
  "typer[all]>=0.12.0",
  "weasyprint>=62.0",
  "python-docx>=1.1.0",
  "reportlab>=4.2.0"
]

[project.scripts]
truthcast = "app.cli.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
